src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.header {
  padding-left: 20px;
  margin-bottom: 0;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  height: 325px;
  padding-left: 20px;
}

form {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  width: 170px;
  height: 200px;
}

.home-header {
  margin-top: 90px;
}

.home-links {
  display: flex;
  justify-content: space-between;
  width: 25%;
}

button {
  margin-top: 8px;
}

